aims to avoid buttons cutting get cut off at half their height when on live site

--- a/src/stylesheets/_bookeasy.buttons-list.scss
+++ b/src/stylesheets/_bookeasy.buttons-list.scss
@@ -6,6 +6,7 @@
 
 
 .button-list {
+    box-sizing: content-box;
     margin-bottom: 20px;
 
     &:empty {
